# allourthings-core

./: .gitignore  Cargo.toml  Package.swift  README.md  build.rs  index.d.ts  index.js  package.json
.github/workflows/: ci.yml  publish.yml  release-ios.yml
Sources/AllourthingsCore/: allourthings_core.swift
scripts/: build-ios.sh
src/: cache.rs  error.rs  id.rs  item.rs  lib.rs  napi_bindings.rs  slug.rs  storage.rs  uniffi_bindings.rs
test-fixtures/catalog/items/full-item-00000002/: item.json
tests/: conformance.rs
