[package]
name = "allourthings-core"
version = "0.1.0"
edition = "2021"
description = "Core storage library for All Our Things — shared across MCP server, iOS, and Android."
license = "MIT"
repository = "https://github.com/matt-harding/allourthings-core"
keywords = ["inventory", "storage", "mcp", "household"]
categories = ["filesystem"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
