[package]
name = "allourthings-core"
version = "0.1.0"
edition = "2021"
description = "Core storage library for All Our Things — shared across MCP server, iOS, and Android."
license = "MIT"
repository = "https://github.com/matt-harding/allourthings-core"
keywords = ["inventory", "storage", "mcp", "household"]
categories = ["filesystem"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
napi = ["dep:napi", "dep:napi-derive"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
thiserror = "1"
napi = { version = "2", features = ["napi4", "serde-json"], optional = true }
napi-derive = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
napi-build = "1"
