[package]
name = "allourthings-core"
version = "0.1.10"
edition = "2021"
description = "Core storage library for All Our Things — shared across MCP server, iOS, and Android."
license = "MIT"
repository = "https://github.com/matt-harding/allourthings-core"
keywords = ["inventory", "storage", "mcp", "household"]
categories = ["filesystem"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
napi   = ["dep:napi", "dep:napi-derive"]
uniffi = ["dep:uniffi", "dep:uniffi_bindgen", "uniffi/cli"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
thiserror = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
napi       = { version = "2", features = ["napi4", "serde-json"], optional = true }
napi-derive = { version = "2", optional = true }
uniffi         = { version = "0.28", optional = true }
uniffi_bindgen = { version = "0.28", optional = true }

# The cli feature enables uniffi::cli::uniffi_bindgen_main()
# used by the uniffi-bindgen binary target below.

[dev-dependencies]
tempfile = "3"

[build-dependencies]
napi-build = "1"
